--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -9,12 +9,12 @@
         .text-body
           .body-title
             h3.title.text-center
-              | Artyque For Artists
+              | ARTYQUE For Artists
             br
             h4.color.c-blue.modal-lead-text
               | ARTYQUE is a new kind of agency dedicated to the career growth of emerging and mid-career artists across Europe. 
-          .container-fluid.separate-content-bottom
-            .row
+          .container-fluid.separate-content-bottom.c-medium.text-justify
+            .row.mb-4
               .col-12.col-sm-6
                 | Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your provenance, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally. 
                 br
@@ -22,13 +22,10 @@
               .col-12.col-sm-6
                 |  After signing with us you will get a personal agent with whom you will develop your digital portfolio on our website. We will then work our magic while you enjoy a stress-free creation process back to your studio.
               .col-12.text-center
-                b.color.c-blue
+                h4.color.c-blue.modal-lead-text.mt-3
                   | Your only task will be creating your next masterpiece.
                 br
       .container-bullets
-        h2.link-title.text-center.color.c-blue
-          | ARTYQUE will:
-        br
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
           ul
             li
@@ -43,10 +40,9 @@
               |  Support your career growth 
       .text-body.text-center.separate-content
         .body-title
-          h3.title.text-center
-            | Change your career already today. <br>
-              Start working with us. 
-          h4.color.c-blue.modal-lead-text
+          h3.text-center.modal-lead-text
+            | What is your wildest dream as an Artist? Let us bring you one step closer
+          h4.c-blue
             | Send us your portfolio at info@artyque.com and let's <br> schedule an interview. 
         = link_to "Contact Us", contact_path, class: "button-primary"
 #modal_galleries.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
@@ -59,21 +55,18 @@
       .modal-body
         .text-body
           .body-title
-            h3.title.text-center
-              | Artyque For Partners
+            h3.color.c-blue.modal-lead-text
+              | ARTYQUE For Partners
             br
-            h4.color.c-blue.modal-lead-text
+            h4.c-blue
               | ARTYQUE is a new kind of agency that simplifies your artists research and selection process. 
-          .container-fluid.separate-content-bottom
-            .row
+          .container-fluid.separate-content-bottom.c-medium.text-justify
+            .row.mb-4
               .col-12.col-sm-6
                 | We carefully scope regional markets (Europe, West Africa and Asia) and select the most promising artists in order to bring quality and singularity to your art space while you focus solely on developing your relationship with clients and grow your reputation. 
               .col-12.col-sm-6
                 | Following your preferences and specifications, we propose a selection of the top emerging artists from within our agency to you on a regular basis. Once you have chosen the artist for your next exhibition. We support you in the organisation of the show with our associated curators, PR Specialists and logistic partners. 
       .container-bullets
-        h2.link-title.text-center.color.c-blue
-            | ARTYQUE will:
-        br
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
           ul
             li
@@ -86,9 +79,9 @@
               |  Reach new clients and establish a stronger relationship with existing ones
       .text-body.text-center.separate-content
         .body-title
-          h3.title.text-center
-            | Artyque For Partners
-          h4.color.c-blue.modal-lead-text
+          h3.text-center.modal-lead-text
+            | ARTYQUE For Partners
+          h4.c-blue
             |  Looking for your next big artist? We bring incredible 
             br
             | talents right to you while you run the show.
@@ -104,17 +97,17 @@
         .text-body
           .body-title
             h3.title.text-center
-              | Artyque for Collectors
+              | ARTYQUE for Collectors
             br
             h4.color.c-blue.modal-lead-text
               | ARTYQUE is a new kind of agency that will help you to invest in art in a more rewarding way and become a true tastemaker.
-          .container-fluid.separate-content-bottom
-            .row
+          .container-fluid.separate-content-bottom.c-medium.text-justify
+            .row.mb-4
               .col-12.col-sm-6
                 | We want to provide you with a new and easy way of investing in art, whereby investing does not only mean buying and selling works but also directly supporting the rise of your favourite artists and so, of your collection’s value. By doing so, you will take part in setting new trends you truly believe in and become an influential player in the art world.
               .col-12.col-sm-6
                 | We carefully select the most promising emerging and mid-career artists across Europe, Africa and Asia for you to establish, develop or specialise your collection. We actively promote their works, organise exhibition and develop their provenance to ultimately increase their value, giving you the certainty that your investment will grow over time.
-            h4.color.c-blue.modal-lead-text
+            h4.color.c-blue.modal-lead-text.mt-3
               | Through ARTYQUE you can buy, commission and give patronage to our Artists and by doing so, you will take part in setting new trends you believe in and become an influential player in the Art world.  
       .container-bullets
         .w-100.wrapper-body-bullets.background.c-light-gray.bg-blue
@@ -131,8 +124,8 @@
               |  Invest smart and increase the value of your collection
       .text-body.text-center.separate-content
         .body-title
-          h3.title.text-center
-            | Artyque For Collectors
-          h4.color.c-blue.modal-lead-text
+          h3.text-center.modal-lead-text
+            | ARTYQUE For Collectors
+          h4.c-blue.mb-4
             |  Invest smart and join us in our journey to  Artists empowerment
           = link_to "Discover Out Talents", artists_path, class: "button-primary"
