about page tweak

--- a/app/views/shared/_about_section.html.slim
+++ b/app/views/shared/_about_section.html.slim
@@ -36,13 +36,12 @@
             | Ksenia Stepanova
           h5.title
             | Creative Director & Co-Founder
-      .text.col
+      .text.col.text-justify
         h3.title
           | Our Philosophy
-        br
-        p.color.c-dark-blue
+        p.c-dark-blue
           | To respond to the biggest challenges our societies are facing today, we believe that collaboration needs to be the foundation of everything we do. By opening this agency and gathering a great community around it, we want to give the option of a fresh approach to all the actors of the Art world, for them to grow together in a more rewarding way. 
-          <br>
+        p.c-dark-blue
           | We are building ARTYQUE with all the business expertise and creative approach necessary to ally individual effort with strategic collaboration for the benefit of each one of our members.
   .square-1
   .square-2
