--- a/app/assets/stylesheets/components/_stim_modal.scss
+++ b/app/assets/stylesheets/components/_stim_modal.scss
@@ -14,8 +14,8 @@
   width: 120ch;
   max-width: 100vw;
 
-  min-height: calc(1.5rem * 30);
-  max-height: 100vh;
+  height: calc(1.5rem * 30);
+  max-height: 85vh;
 
   position: fixed;
 
