padding fix for quotations when no video

--- a/app/views/artists/_quotation.html.slim
+++ b/app/views/artists/_quotation.html.slim
@@ -1,4 +1,4 @@
-div class=['quotation', cp(palette, 2, :bg)] id="quotation"
+div class=['quotation', cp(palette, 2, :bg), artist.video.empty? ? 'mb-4' : ''] id="quotation"
   p class=cp(palette, 4, :fg)
     q
       = quotation
