Finished the new fotter to ksenias specs

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,6 +31,17 @@
       }
 	}
 }
+ 
+.header-text {
+	font-size: 30px;
+}
+
+.socmed-link {
+	font-size: 28px;
+    color: white !important;
+    text-decoration: none;
+    padding-right: 8px;
+}
 
 .featured-artwork-photo {
 	background: lightgray;
