--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,7 @@
 		  	<div class="col-12 col-sm-6 d-flex align-items-center">
 		  		<div class="text-lockup-banner">
 		  			<h4 class="title color c-white">Welcome to artyque</h4>
-		  			<h2 class="color c-white">Europe's Elite <br> Digital Art Agency</h2>
-		  			<br>
+		  			<p class="header-text color c-white">Europe's Elite Art Agency</p>
 		  			<%= link_to "Discover Our Talent", artists_path, class: "button-primary" %>
 		  		</div>
 		  	</div>
