--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -60,6 +60,7 @@
 
 .card.news-post{
   // News Posts Index
+  border-radius: 0 !important;
   position: relative;
   display: flex;
   flex-direction: row;
