--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,30 +1,44 @@
 .footer{
   @extend .background-blue;
   @extend .c-white;
-  width: 100vw;
-  @extend .p-0;
   @extend .m-0;
-  @extend .flex-center;
-  height: $footer-height;
+  display: flex;
+  padding: 40px;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100vw;
+  height: 268px;
+  li {
+    opacity: 0.7;
+  }
   ul.links{
     list-style: none;
     font-size: 1rem;
     font-style: normal;
     font-weight: 100;
-    position: absolute;
-    right: 0;
-    text-align: right;
+    text-align: left;
     @extend .pr-4;
     @extend .mb-0;
     li{
       a{
-        @extend .c-light-gray;
         transition: color 250ms ease-out;
         &:hover{
           @extend .c-pink;
         }
       }
     }
+  }
+}
+
+.inner-footer {
+  margin: 0;
+  justify-content: flex-end;
+  background: #264e58;
+  padding: 23px;
+  display: flex;
+  list-style: none;
+  a {
+    margin-right: 23px;
   }
 }
 
