--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:300&display=swap');
 
 // Define fonts for body and headers
 $body-font: "Merriweather Sans", "Helvetica", "sans-serif";
