--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,44 +1,58 @@
 <%= render "shared/contact_cta" unless @contact_page %>
-<div class="footer-top d-block d-sm-flex">
-  <ul class="legal-foot-note links">
-    <h5 class="color c-white links">Legal</h5>
-    <li><%= link_to "GDPR Policy", privacy_path %></li>
-    <li><%= link_to "Impressum", impressum_path %></li>
-  </ul>
-  <ul class="legal-foot-note links">
-    <h5 class="color c-white">Site Map</h5>
-    <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "Our Artists", artists_path %></li>
-    <li><%= link_to "About Us", about_path %></li>
-    <li><%= link_to "Contact", contact_path %></li>
-    <li><%= link_to "News", news_posts_path %></li>
-  </ul>
-  <ul class="legal-foot-note links">
-    <h5 class="color c-white">Account</h5>
-    <li id="login-button">
-      <% if user_signed_in? %>
-        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Artist Login", new_user_session_path, id: 'login' %>
-      <% end %>
-    </li>
-    <% if user_signed_in? %>
-      <% if current_user.admin? %>
-        <li>
-          <%= link_to "Admin Dashboard", admin_dashboard_path %>
-        </li>
-      <% elsif current_user.artist? && current_user.artist %>
-        <li>
-          <%= link_to "My Artist Profile", edit_artist_path(current_user.artist) %>
-        </li>
-      <% end %>
-    <% end %>
-  </ul>
-</div>
 <footer class="footer">
+  <div class="d-flex">
+    <ul class="legal-foot-note links">
+      <h5 class="color c-white">Site Map</h5>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Our Artists", artists_path %></li>
+      <li><%= link_to "About Us", about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
+      <li><%= link_to "News", news_posts_path %></li>
+    </ul>
+    <ul class="legal-foot-note links">
+      <h5 class="color c-white links">ARTYQUE UG</h5>
+      <li>Lohmühlenstraße 65, <br>
+          12435, Berlin</li>
+      <li>VAT: DE325205290</li>
+      <br>
+      <li><%= link_to "GDPR Policy", privacy_path %></li>
+      <li><%= link_to "Impressum", impressum_path %></li>
+    </ul>
+    <ul class="legal-foot-note links">
+      <h5 class="color c-white links">Contact</h5>
+      <li><a href="mailto:info@artyque.com"></a>info@artyque.com</li>
+      <br>
+      <h5 class="color c-white links">Follow Us</h5>
+      <div class="d-flex">
+        <a target="blank" class="socmed-link" href="https://www.instagram.com/ksenia_crm/?igshid=1j8vk08bfpfnx"><i class="fab fa-instagram"></i></a>
+        <a target="blank" class="socmed-link" href="https://www.linkedin.com/company/artyquecom/about/"><i class="fab fa-linkedin"></i></a>
+      </div>
+     
+    </ul>
+  </div>
   <div class="image">
     <%= link_to root_path do %>
       <%= image_tag 'logo-footer.svg', class: 'logo' %>
     <% end %>
   </div>
 </footer>
+<ul class="legal-foot-note inner-footer links">
+  <li id="login-button">
+    <% if user_signed_in? %>
+      <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Artist Login", new_user_session_path, id: 'login' %>
+    <% end %>
+  </li>
+  <% if user_signed_in? %>
+    <% if current_user.admin? %>
+      <li>
+        <%= link_to "Admin Dashboard", admin_dashboard_path %>
+      </li>
+    <% elsif current_user.artist? && current_user.artist %>
+      <li>
+        <%= link_to "My Artist Profile", edit_artist_path(current_user.artist) %>
+      </li>
+    <% end %>
+  <% end %>
+</ul>
