--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -1,9 +1,10 @@
 .row#description.mb-5.mt-5
   .col-12
     == md artist.about_me
-    p
-      em
-        = link_to 'See Full Profile >', artist_resume_blocks_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link'
+    - if artist.resume?
+      p
+        em
+          = link_to 'See Full Profile >', artist_resume_blocks_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link'
 - if artist.featured_artwork.present?
   .row#featured-artwork
     .col-12
