--- a/app/views/artworks/_fields.html.slim
+++ b/app/views/artworks/_fields.html.slim
@@ -13,8 +13,8 @@
     .col-12.col-sm-4
       = f.input :height, label: "Height (cm)"
     .col-12.col-sm-4
-      = f.input :depth, label: "Depth (kg)"
-  = f.input :weight
+      = f.input :depth, label: "Depth (cm)"
+  = f.input :weight, label: "Weight (kg)"
   = f.input :year
   = f.input :price, label: "Price (optional)"
 h2.border-top-light-gray.mb-3
