--- a/app/views/collections/create.js.slim
+++ b/app/views/collections/create.js.slim
@@ -8,3 +8,4 @@
   = j render "artists/artworks", artist: @artist
   | '); 
 |  window.init(); 
+| document.body.scrollTop = document.documentElement.scrollTop = 0; // Scroll to top
