--- a/app/views/links/edit.js.slim
+++ b/app/views/links/edit.js.slim
@@ -1,3 +1,4 @@
 | function refreshDashboard(innerHTML) { const form = document.getElementById('edit-form'); form.innerHTML = innerHTML; } refreshDashboard('
 = j render "edit", artist: @artist, link: @link
 | '); window.init(); 
+| document.body.scrollTop = document.documentElement.scrollTop = 0; // Scroll to top
