--- a/app/views/collections/update.js.slim
+++ b/app/views/collections/update.js.slim
@@ -15,3 +15,5 @@
   = j render 'shared/flashes', notice: "Saved successfully"
   | ');
 |  window.init(); 
+| $(".alert").delay(5000).fadeOut(500);
+| document.body.scrollTop = document.documentElement.scrollTop = 0; // Scroll to top
