--- a/app/views/links/update.js.slim
+++ b/app/views/links/update.js.slim
@@ -16,3 +16,4 @@
   | ');
 |  window.init(); 
 | $(".alert").delay(5000).fadeOut(500);
+| document.body.scrollTop = document.documentElement.scrollTop = 0; // Scroll to top
