remove word links

--- a/app/views/artists/_layout_3.html.slim
+++ b/app/views/artists/_layout_3.html.slim
@@ -47,7 +47,7 @@
       .row#links-gallery.mb-5
         .col-12.mb-3
           h3.title
-            | Links
+            | Media & Press
         .col-12
           == render 'links/gallery', links: artist.links
     - if artist.upcoming_projects.present?
