--- a/app/views/artists/_layout_2.html.slim
+++ b/app/views/artists/_layout_2.html.slim
@@ -2,7 +2,8 @@
   .col-12.col-md-4
     .row#description.mb-5.mt-5
       .col-12
-        == md artist.about_me
+        div#about-me.text-justify
+          == md artist.about_me
         = link_to 'See Full Profile >', artist_resume_blocks_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', 'data-target': 'modal.link', class: 'button-primary'
     - if artist.resume?
       .row#resume.resume-sidebar
