--- a/app/views/artists/_layout_3.html.slim
+++ b/app/views/artists/_layout_3.html.slim
@@ -17,7 +17,8 @@
           = link_to "See all Artwork", artist_collections_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', class: 'button-tertiary w-100'
     ul.resume.resume-blocks.row.mt-5.mb-5
       li.resume-block.col-12.col-sm-6.col-md-4
-        == md artist.about_me
+        div#about-me.text-justify
+          == md artist.about_me
       - if artist.resume?
         - artist.blocks.each_with_index do |block, index|
           li.resume-block.col-12.col-sm-6.col-md-4
