--- a/app/views/collections/index.html.slim
+++ b/app/views/collections/index.html.slim
@@ -1,3 +1,4 @@
+== render 'artists/mini_banner', artist: @artist
 .panel[data-controller="modal"]
   == render 'index', collections: @collections
   == render 'shared/stim_modal'
