--- a/app/views/artists/_layout_1.html.slim
+++ b/app/views/artists/_layout_1.html.slim
@@ -18,4 +18,5 @@
   .col-12
     == render 'artworks/gallery', artworks: artworks
   .col-12
-    = link_to "See all Artwork", artist_collections_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', class: 'button-tertiary w-100'
+    = link_to "See all Artwork", artist_collections_path(artist), class: 'button-tertiary w-100'
+
