--- a/app/views/artists/_layout_3.html.slim
+++ b/app/views/artists/_layout_3.html.slim
@@ -14,7 +14,7 @@
         .col-12
           == render 'artworks/gallery', artworks: artworks
         .col-12
-          = link_to "See all Artwork", artist_collections_path(artist), remote: true, 'data-action': 'ajax:success->modal#openAndUpdate ajax:error->modal#openAndError', class: 'button-tertiary w-100'
+          = link_to "See all Artwork", artist_collections_path(artist), class: 'button-tertiary w-100'
     ul.resume.resume-blocks.row.mt-5.mb-5
       li.resume-block.col-12.col-sm-6.col-md-4
         div#about-me.text-justify
