--- a/app/views/collections/_index.html.slim
+++ b/app/views/collections/_index.html.slim
@@ -2,9 +2,13 @@
   - collections.each do |collection|
     .row.mb-3
       .col-12
-        .row.mb-2
-          h5
-            = collection.name
+        .row
+          .col-12
+            h5
+              = collection.name
+        .row.b-2
+          .col-12.text-justify.c-medium
+            = md collection.description
         .row
           .col-12
             == render 'artworks/gallery', artworks: collection.artworks
