--- a/app/views/artists/_banner.html.slim
+++ b/app/views/artists/_banner.html.slim
@@ -16,7 +16,7 @@
             = artist.super_title
           h1
             span class=cp(@palette, 2, :fg)
-              = artist.name + ','
+              = artist.name
             br /
             span class=[cp(@palette, 1, :fg), 'shadow-text-light']
               = artist.title
