make title in other font on banner

--- a/app/views/artists/_banner.html.slim
+++ b/app/views/artists/_banner.html.slim
@@ -17,8 +17,8 @@
           h1
             span class=cp(@palette, 2, :fg)
               = artist.name
-            br /
-            span class=[cp(@palette, 1, :fg), 'shadow-text-light']
+          h4
+            span class=[cp(@palette, 1, :fg), 'title shadow-text-light']
               = artist.title
           p class=cp(@palette, 2, :fg)
             = artist.description
