--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -61,12 +61,10 @@ html, body {
   height: 100%;
 }
 .page-wrap {
-  min-height: 100%;
-  margin-bottom: calc(-1 * #{$footer-height});
-  padding-bottom: $footer-height;
-  @include media-breakpoint-down(sm) {
-    max-width: 100vw;
-    overflow: hidden;
+  @include media-breakpoint-up(md) {
+    min-height: 100%;
+    margin-bottom: calc(-1 * #{$footer-height});
+    padding-bottom: $footer-height;
   }
 }
 .page-wrap:after {
