--- a/app/assets/stylesheets/design_toolbox/_scroll.scss
+++ b/app/assets/stylesheets/design_toolbox/_scroll.scss
@@ -13,7 +13,7 @@
 
 .scroll-smooth{
   scroll-behavior: smooth;
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 }
 
 html{
