--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -55,7 +55,7 @@
       .modal-body
         .text-body
           .body-title
-            h3.color.c-blue.modal-lead-text
+            h3.title.text-center
               | ARTYQUE For Partners
             br
             h4.c-blue
@@ -125,6 +125,7 @@
       .text-body.text-center.separate-content
         .body-title
           h3.text-center.modal-lead-text
+            h3.title.text-center
             | ARTYQUE For Collectors
           h4.c-blue.mb-4
             |  Invest smart and join us in our journey to  Artists empowerment
