make images not downloadable

--- a/app/assets/stylesheets/components/_artwork.scss
+++ b/app/assets/stylesheets/components/_artwork.scss
@@ -4,6 +4,7 @@
       min-height: 20rem;
       max-height: 75vh;
       width: auto;
+      pointer-events: none;
     }
     margin-bottom: 5rem;
   }
