--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,7 +20,7 @@
     </ul>
     <ul class="legal-foot-note links">
       <h5 class="color c-white links">Contact</h5>
-      <li><a href="mailto:info@artyque.com"></a>info@artyque.com</li>
+      <li><a href="mailto:info@artyque.com">info@artyque.com</a></li>
       <br>
       <h5 class="color c-white links">Follow Us</h5>
       <div class="d-flex">
