fix up artwork links

--- a/app/views/artworks/show.html.slim
+++ b/app/views/artworks/show.html.slim
@@ -1,3 +1,4 @@
+== render 'artists/mini_banner', artist: @artwork.collection.artist
 .panel[data-controller="modal"]
   == render 'show', artwork: @artwork
   == render 'shared/stim_modal'
