--- a/app/views/artists/index.html.slim
+++ b/app/views/artists/index.html.slim
@@ -18,7 +18,7 @@
                 div.featured-artist-photo style="background-image: linear-gradient(380deg, #1a2e3d 21.18%, rgba(26, 46, 61, 0.46) 42.49%), url(#{cl_image_path artist.photo if artist.photo.present?});"
         .container.artwork-artist-index.d-none.d-sm-block
           h4.title.color.c-white Featured Artwork
-          = render 'artworks/gallery', artworks: artist.artworks.highlights
+          = render 'artworks/gallery', artworks: artist.artworks.highlights, remote: false
   .line-wrapper
     .container
       .row
