--- a/app/views/admin/dashboard.html.slim
+++ b/app/views/admin/dashboard.html.slim
@@ -82,10 +82,10 @@
               li.text-center
                 .text
                   | + Add Featured Artwork
-            - @artworks_selected.each_with_index do |artwork, i|
-              = form_for artwork, html: { id: "submit-artwork-box-#{i}"} do |f|
+            - @artworks_selected.each do |artwork|
+              = form_for artwork, html: { id: "submit-artwork-box-#{artwork.id}"} do |f|
                 label.featured_check
-                  = f.check_box :homepage_featured, id: "artwork-box-#{i}"
+                  = f.check_box :homepage_featured, id: "artwork-box-#{artwork.id}"
                   - if artwork.homepage_featured
                     = icon('fas', 'minus-circle')
                 li
