--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper-banner">
+<div class="wrapper-banner main-banner">
 	<div class="banner-content banner-carousel bg-blue-gradient">
 		<%= image_tag "top_wave.svg", class: "home-wave-top wave-top position-absolute drag-disable" %>
 	    <%= image_tag "bottom_wave.svg", class: "wave-bottom position-absolute drag-disable" %>
