--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -18,7 +18,7 @@
 
 
           * **Responsible Person(s)**:
-          Mattia Cremiux & Ksenia Stepanova.
+          Mattia Cremieux & Ksenia Stepanova.
 
 
           * **Register of Systems**:
