--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 .contain-featured-artist {
   height: auto;
 	min-height: 500px;
-	// overflow: hidden;
+	overflow: hidden;
 	.info-side {
 	    z-index: 1000;
       @include media-breakpoint-down(sm) {
@@ -24,14 +24,15 @@
 	.featured-artist-photo {
 		background-size: cover;
 	    background-position: center;
-	  	border-radius: 60% 0 0 60%;
-	    width: 110%;
+	  	border-radius: 3px;
+	    width: 100%;
 	    height: 280px;
 	    position: relative;
 	    @include media-breakpoint-up(sm) {
 		    left: 0px;
 		    top: -88px;
    			position: absolute;
+        border-radius: 60% 0 0 60%;
 			height: 660px;
       }
 	}
@@ -129,7 +130,7 @@
 	.flickity-page-dots {
 		bottom: 45px;
 	}
-	box-shadow: $shadow-light;
+	// box-shadow: $shadow-light;
 } 
  
 .artist-carousel-cell {
@@ -152,7 +153,7 @@
 }
 
 .home-quote {
-	font-size: 1.5rem !important;
+	font-size: 1.4rem !important;
 }
 
 .home-wave-top {
