remove fixed height

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,7 +18,7 @@
 		}
 		 @include media-breakpoint-up(sm) {
    			padding: 68px 100px;
-			height: 400px;
+			// height: 400px;
       }
 	}
 	.featured-artist-photo {
